[project]
name = "care-director-expert"
version = "0.1.0"
description = "Qdrant MCP server integration with LlamaIndex for document search"
dependencies = [
    "llama-index",
    "qdrant-client", 
    "llama-index-vector-stores-qdrant",
    "llama-index-embeddings-fastembed",
    "mcp-server-qdrant",
    "docx2text", # Required for MS Word docs
    "openpyxl", # required for MS Excel docs
    "cryptography>=3.1"  # Required for encrypted PDFs
]

[tool.setuptools]
packages = []