[project]
name = "care-director-expert"
version = "0.1.0"
description = "Qdrant MCP server integration with LlamaIndex for document search"
dependencies = [
    "tree-sitter-language-pack",
    "llama-index",
    "qdrant-client", 
    "llama-index-vector-stores-qdrant",
    "llama-index-embeddings-fastembed",
    "mcp-server-qdrant",
    "docx2txt", # Required for MS Word docs
    "openpyxl", # required for MS Excel docs
    "cryptography>=3.1"  # Required for encrypted PDFs
]

[tool.setuptools]
packages = []